fix: Adjust alignment and cap height of `.InfoHero__image`

--- a/modules/hanna-css/src/css/InfoHero.scss
+++ b/modules/hanna-css/src/css/InfoHero.scss
@@ -31,8 +31,9 @@
     @include media($mq-tablet_up) {
       padding-left: $var--grid-margin;
       box-sizing: content-box;
-      width: cols_pct(6);
+      width: $var--grid-6;
       padding-top: px_pct(690);
+      max-height: px(850 - 690);
     }
   }
 
@@ -47,11 +48,16 @@
     height: 100%;
     object-fit: contain;
     object-position: 50% 31%;
+
+    @include media($mq-tablet_up) {
+      object-position: 0% 31%;
+
+      .InfoHero--align--left & {
+        object-position: 100% 31%;
+      }
+    }
   }
-  .InfoHero__wrapper {
-    display: flex;
-    flex-direction: column;
-  }
+
   .InfoHero__content {
     margin-top: between_cols(20, 40);
     @include media($mq-tablet_up) {
@@ -94,4 +100,25 @@
   .InfoHero__buttons > .ButtonTertiary {
     display: block;
   }
+
+  // BEGING: Styling for weird custom markup changes in some places on www.reykjavik.is
+  //
+  // .InfoHero__wrapper
+  //     .InfoHero__head
+  //         .InfoHero__title
+  //     .InfoHero
+  //         .InfoHero__content  (w/o `.InfoHero__title`)
+  //         .InfoHero__image
+  //
+  // see `InfoHero.twig` for details...
+  .InfoHero__wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  .InfoHero__head {
+  }
+  .InfoHero__head + * > .InfoHero__image > img {
+    top: $var--space-2;
+  }
+  // END: custom markup
 }
